--- a/_posts/2020-10-31-plotting-election-win-probabilities/plotting-election-win-probabilities.Rmd
+++ b/_posts/2020-10-31-plotting-election-win-probabilities/plotting-election-win-probabilities.Rmd
@@ -80,12 +80,13 @@ dt %>%
                        high = "#ef2e69",
                        midpoint = 50,
                        labels = c("0%", "25%", "50%", "75%", "100%"),
-                       guide = guide_colourbar(barwidth = 30, 
+                       guide = guide_colorbar(barwidth = 10, 
                                               barheight = 0.4,
                                               title.position = "top")) + 
-  labs(fill = "Probability of Trump Winning the State") +
+  labs(fill = "Probability of Trump Winning a State") +
   ggthemes::theme_map() +
-  theme(legend.position = "bottom",
+  theme(legend.position = c(0.3, -0.2),
+        legend.direction= "horizontal",
         legend.title = element_text(family = "Roboto Condensed")) 
 
 ```
