--- a/_posts/2021-10-04-visualization-of-monthly-nber-paper-submissions/visualization-of-monthly-nber-paper-submissions.Rmd
+++ b/_posts/2021-10-04-visualization-of-monthly-nber-paper-submissions/visualization-of-monthly-nber-paper-submissions.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "Visualization of monthly NBER paper submissions"
 description: |
-  A short description of the post.
+  This post is a tidytuesday post. See the post below for the data source.
 author:
   - name: Ashwin Malshe
     url: https://ashwinmalshe.com
+    affiliation: University of Texas at San Antonio
+    affiliation_url: https://business.utsa.edu/faculty/ashwin-malshe/
 date: 10-04-2021
 output:
   distill::distill_article:
