Updated the mf post

--- a/_posts/2020-11-30-mf-performance/mf-performance.Rmd
+++ b/_posts/2020-11-30-mf-performance/mf-performance.Rmd
@@ -170,7 +170,7 @@ hc <- highchart() %>%
                   )
     )
   ) %>% 
-  hc_add_dependency("plugins/rotate-3d.js")
+  hc_add_dependency("highcharts-3d.js")
 
 hc
 
