--- a/_posts/2023-10-26-homework-3-2023/homework-3-2023.Rmd
+++ b/_posts/2023-10-26-homework-3-2023/homework-3-2023.Rmd
@@ -144,7 +144,7 @@ d1 %>%
 
 ## Q5 (3 points)
 
-Using `economics` dataset from `ggplot2`, recreate the following line graph. Learn more about the variables in the dataset by typing `?economics` in the console. Here, the Y acis is plotting unemployment. 
+Using `economics` dataset from `ggplot2`, recreate the following line graph. Learn more about the variables in the dataset by typing `?economics` in the console. Here, the Y axis is plotting unemployment. 
 
 I used `hc_theme_economist()`. You can use any theme you want. You can check out the themes [here](https://jkunst.com/highcharter/articles/themes.html). 
 
